fixed issue with getVal (but added crypic bug)